--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div class="card">
       <div class="imgBox">
          <div class="bark"></div>
-         <img src="/img/we2.jpg" alt="" srcset="">
+         <img src="img/we2.jpg" alt="" srcset="">
       </div>
          <div class="details">
             <h4 class="color1">I Luv U Full</h4>
